[package]
name = "timing-shield"
version = "0.2.0"
authors = ["Tim McLean <tim@timmclean.net>"]
description = "Comprehensive timing leak protection for Rust."
homepage = "https://www.chosenplaintext.ca/open-source/rust-timing-shield/"
repository = "https://github.com/timmclean/rust-timing-shield"
categories = ["cryptography"]
keywords = ["constant-time", "constant", "time", "crypto"]
license = "MIT"
readme = "README.md"

[dev-dependencies]
quickcheck = "0.9.2"
